fixed header spacing

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,14 +8,14 @@ main {
     background-color: #d9dcd6;
 }
 
-nav {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
